src/test/deca/context/invalid/bad-condition.deca
// Description :
//    Test qui utilise une variable non déclarée dans une condition `if`,
//    ce qui devrait lever une erreur de contexte.
//
// Résultats :
//    Erreur de contexte : "Variable non déclarée"
//
// Historique :
//    créé le 11/01/2025
{
    if (x > 0) {
        println("x est positif.");
    }
}
